Fix collapsed-border painting for layered table and cells

BUG=694038
TEST=paint/tables/collapsed-border-layered-table-and-cells.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2717273003
Cr-Commit-Position: refs/heads/master@{#453364}